@@ -3,10 +3,14 @@ aptsh (0.0.7) unstable; urgency=low
   * Fixed bug in printer.c. May had caused strange behaviour of orphans-*
     commands on some architectures (ie. ppc). Closes: #383875.
   * Fixed bug in rls and ls commands - if given argument matched files in
-    current directory (wildcard), in some shells names of these files were 
+    current directory (wildcard), in some shells names of these files were
     used instead of typed text.
+  * Aptsh can be run with commands as arguments, this will work now:
+    aptsh remove wajig
+  * Fixed many minor bugs, added many minor features.
+  * Done many internal improvements, the code seems to be clean now.
 
- -- Marcin Wrochniak <wrochniak@gmail.com>  Sat, 10 Feb 2007 13:42:08 +0100
+ -- Marcin Wrochniak <wrochniak@gmail.com>  Mon,  9 Apr 2007 14:55:27 +0200
 
 aptsh (0.0.6) unstable; urgency=low
 
